--- a/Ex_Files_Nodejs_EssT/Exercise Files/Ch10/10_04/start/package.json
+++ b/Ex_Files_Nodejs_EssT/Exercise Files/Ch10/10_04/start/package.json
@@ -15,7 +15,8 @@
     "Cheerio"
   ],
   "devDependencies": {
-    "chai": "^3.4.0",
-    "nock": "^2.17.0"
+    "chai": "^3.5.0",
+    "nock": "^2.18.2",
+    "rewire": "^2.5.1"
   }
 }
