--- a/Ex_Files_Nodejs_EssT/Exercise Files/Ch10/10_05/start/package.json
+++ b/Ex_Files_Nodejs_EssT/Exercise Files/Ch10/10_05/start/package.json
@@ -15,8 +15,9 @@
     "Cheerio"
   ],
   "devDependencies": {
-    "chai": "^3.4.0",
-    "nock": "^2.17.0",
-    "rewire": "^2.3.4"
+    "chai": "^3.5.0",
+    "nock": "^2.18.2",
+    "rewire": "^2.5.1",
+    "sinon": "^1.17.3"
   }
 }
