--- a/Ex_Files_Nodejs_EssT/Exercise Files/Ch11/11_03/start/package.json
+++ b/Ex_Files_Nodejs_EssT/Exercise Files/Ch11/11_03/start/package.json
@@ -21,7 +21,9 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
+    "grunt-browserify": "^5.0.0",
     "grunt-contrib-jshint": "^0.11.3",
-    "grunt-contrib-less": "^1.0.1"
+    "grunt-contrib-less": "^1.0.1",
+    "jquery": "^2.2.3"
   }
 }
