--- a/Ex_Files_Nodejs_EssT/Exercise Files/Ch08/08_01/start/package.json
+++ b/Ex_Files_Nodejs_EssT/Exercise Files/Ch08/08_01/start/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "cors": "^2.7.1",
-    "express": "^4.13.4",
-    "underscore": "^1.8.3"
+    "express": "^4.13.4"
   }
 }
