--- a/BasicWebServer/package.json
+++ b/BasicWebServer/package.json
@@ -17,5 +17,11 @@
     "body-parser": "^1.14.1",
     "cors": "^2.7.1",
     "express": "^4.13.3"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "cheerio": "^0.20.0",
+    "istanbul": "^0.4.3",
+    "supertest": "^1.2.0"
   }
 }
