--- a/MockTesting/package.json
+++ b/MockTesting/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ski-dictionary",
+  "name": "MockTesting",
   "version": "1.0.0",
   "description": "A collection of skier terms and definitions",
   "main": "app.js",
@@ -11,18 +11,10 @@
     "terms",
     "dictionary"
   ],
-  "author": "Alex Banks",
+  "author": "Siddharth Mishra",
   "license": "MIT",
-  "dependencies": {
-    "body-parser": "^1.14.1",
-    "cors": "^2.7.1",
-    "express": "^4.13.3"
-  },
   "devDependencies": {
     "chai": "^3.5.0",
-    "cheerio": "^0.20.0",
-    "istanbul": "^0.4.3",
-    "nock": "^8.0.0",
-    "supertest": "^1.2.0"
+    "nock": "^8.0.0"
   }
 }
