--- a/PersonalAdmin/package.json
+++ b/PersonalAdmin/package.json
@@ -12,6 +12,9 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "mysql": "^2.10.2",
+    "sequelize": "^3.22.0",
+    "serve-favicon": "~2.3.0",
+    "sqlite": "0.0.4"
   }
 }
