--- a/Socket-Practice/UnsClient/package.json
+++ b/Socket-Practice/UnsClient/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-websocket-server",
+  "name": "uns-client",
   "version": "1.0.0",
-  "description": "Uses express with websocket to server the request.",
+  "description": "To test Uns Server",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,9 +9,6 @@
   "author": "Siddharth Mishra",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.14.1",
-    "http": "0.0.0",
-    "url": "^0.11.0",
     "ws": "^2.0.3"
   }
 }
