--- a/Socket-Practice/clientWebSocket/package.json
+++ b/Socket-Practice/clientWebSocket/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-websocket-server",
+  "name": "client-websocket",
   "version": "1.0.0",
-  "description": "Uses express with websocket to server the request.",
+  "description": "Client for npm Package WebSocket https://www.npmjs.com/package/websocket",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,9 +9,6 @@
   "author": "Siddharth Mishra",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.14.1",
-    "http": "0.0.0",
-    "url": "^0.11.0",
-    "ws": "^2.0.3"
+    "websocket": "^1.0.24"
   }
 }
